--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-html, body, #root {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
+@media print {
+  html, body, #root {
+    overflow: hidden;
+  }
+}
+
+@media screen {
+  html, body, #root {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    overflow-x: hidden;
+  }
 }
