--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 @media print {
-  @page {
-    size: A4 !important;
-    margin: 25mm !important;
-  }
 
   html,
   body {
@@ -35,25 +31,33 @@
     font-family: 'Quicksand', sans-serif;
     text-align: justify;
     color: black;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    margin: 1rem;
+    font-size: 1em;
+    line-height: 1.5em;
+    margin: 1em;
   }
 
   code {
     font-family: 'Fira Code', monospace;
-    background-color: whitesmoke;
+    background-color: #81c91e;
+  }
+
+  blockquote {
+    font-style: italic;
+    padding: 0.5em;
+    margin: 0;
+    border-left: 0.25em solid;
+    color: #81c91e;
   }
 
   div.tools {
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.25em;
     user-select: none;
   }
 
   span.btn {
     cursor: pointer;
-    margin-right: 1rem;
-    padding: 0.125rem 0;
+    margin-right: 1em;
+    padding: 0.125em 0;
     display: inline-block;
   }
 
