--- a/src/index.scss
+++ b/src/index.scss
@@ -4,22 +4,15 @@
 
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/images";
+//@import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
+
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/breadcrumb";
+@import "../node_modules/bootstrap/scss/buttons";
 
 @page {
     margin: 25mm;
     padding: 0mm;
-}
-
-span.btn {
-    display: inline-block;
-    cursor: pointer;
-}
-
-span.btn.active {
-    color: $primary;
 }
