--- a/src/index.scss
+++ b/src/index.scss
@@ -9,10 +9,16 @@
 @import "../node_modules/bootstrap/scss/grid";
 
 @import "../node_modules/bootstrap/scss/utilities";
-@import "../node_modules/bootstrap/scss/breadcrumb";
 @import "../node_modules/bootstrap/scss/buttons";
 
 @page {
-    margin: 25mm;
-    padding: 0mm;
+    size: A4 !important;
+    margin: 25mm !important;
+    padding: 0mm !important;
+}
+
+@media print {
+    .d-print-p-0 {
+        padding: 0rem !important;
+    }
 }
