--- a/src/index.scss
+++ b/src/index.scss
@@ -5,17 +5,20 @@
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
 //@import "../node_modules/bootstrap/scss/images";
-@import "../node_modules/bootstrap/scss/code";
+//@import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
 
-@import "../node_modules/bootstrap/scss/utilities";
-@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/utilities/align";
+@import "../node_modules/bootstrap/scss/utilities/background";
+@import "../node_modules/bootstrap/scss/utilities/borders";
+@import "../node_modules/bootstrap/scss/utilities/display";
+@import "../node_modules/bootstrap/scss/utilities/position";
+@import "../node_modules/bootstrap/scss/utilities/shadows";
+@import "../node_modules/bootstrap/scss/utilities/sizing";
+@import "../node_modules/bootstrap/scss/utilities/spacing";
+@import "../node_modules/bootstrap/scss/utilities/text";
 
-@page {
-    size: A4 !important;
-    margin: 25mm !important;
-    padding: 0mm !important;
-}
+@import "../node_modules/bootstrap/scss/buttons";
 
 @media print {
     .d-print-p-0 {
