Fixed readme, rebrand colors and other tweaks

--- a/app.scss
+++ b/app.scss
@@ -1,13 +1,14 @@
+// Functions.Variables.Mixins
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
-
+// Core
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
 //@import "node_modules/bootstrap/scss/images";
 //@import "node_modules/bootstrap/scss/code";
 //@import "node_modules/bootstrap/scss/grid";
-
+// Utilities
 @import "node_modules/bootstrap/scss/utilities/align";
 @import "node_modules/bootstrap/scss/utilities/background";
 @import "node_modules/bootstrap/scss/utilities/borders";
@@ -25,7 +26,7 @@
 @import "node_modules/bootstrap/scss/utilities/spacing";
 @import "node_modules/bootstrap/scss/utilities/text";
 //@import "node_modules/bootstrap/scss/utilities/visibility";
-
+// Components
 @import "node_modules/bootstrap/scss/buttons";
 
 @media print {
