--- a/app.scss
+++ b/app.scss
@@ -6,7 +6,7 @@
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
 //@import "node_modules/bootstrap/scss/images";
-@import "node_modules/bootstrap/scss/code";
+//@import "node_modules/bootstrap/scss/code";
 //@import "node_modules/bootstrap/scss/grid";
 // Utilities
 @import "node_modules/bootstrap/scss/utilities/align";
