--- a/app.scss
+++ b/app.scss
@@ -1,3 +1,4 @@
+$font-family-sans-serif: "Quicksand";
 // Functions.Variables.Mixins
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
