--- a/app.scss
+++ b/app.scss
@@ -16,7 +16,7 @@ $font-family-sans-serif: "Quicksand";
 //@import "node_modules/bootstrap/scss/utilities/clearfix";
 @import "node_modules/bootstrap/scss/utilities/display";
 //@import "node_modules/bootstrap/scss/utilities/embed";
-//@import "node_modules/bootstrap/scss/utilities/flex";
+@import "node_modules/bootstrap/scss/utilities/flex";
 //@import "node_modules/bootstrap/scss/utilities/float";
 //@import "node_modules/bootstrap/scss/utilities/overflow";
 @import "node_modules/bootstrap/scss/utilities/position";
