fixes, new features

--- a/app.scss
+++ b/app.scss
@@ -6,7 +6,7 @@ $font-family-sans-serif: "Quicksand";
 // Optional
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
-//@import "node_modules/bootstrap/scss/images";
+@import "node_modules/bootstrap/scss/images";
 //@import "node_modules/bootstrap/scss/code";
 //@import "node_modules/bootstrap/scss/grid";
 // Utilities
