--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,5 @@
-$font-family-sans-serif: "Quicksand";
+$font-family-sans-serif: "Quicksand", Arial, Helvetica, sans-serif;
+$font-family-monospace: "Fira code", Courier, monospace;
 // Functions.Variables.Mixins
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
@@ -34,4 +35,8 @@ $font-family-sans-serif: "Quicksand";
   .d-print-p-0 {
     padding: 0rem !important;
   }
+}
+
+.img {
+  max-height: 20rem;
 }
